# facility-feed-service

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
deploy/: aws_task_definition.json  cloudwatch_event_rule.json  setup_cloudwatch_event.sh
src/database/: connection.py  queries.py  repository.py
src/services/: feed_generate.py  main.py  metadata_generate.py  s3_uploader.py  scheduler.py
src/utils/: config.py  logger.py
tests/: test_facility_repository.py  test_feed_generator.py  test_main.py  test_metadata_generator.py  test_scheduler.py  test_update_s3.py
